force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <description>Unified work item differentiated by record type: Initiative, Epic, Story, Task, Bug, Chapter, Step.</description>
    <label>Work Item</label>
    <nameField>
        <label>Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>