force-app/main/default/objects/Work_Item__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member responsible for completing this work item.</description>
    <inlineHelpText>Select the person who will work on and complete this item.</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>