force-app/main/default/objects/Work_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the work to be done, including acceptance criteria or relevant notes.</description>
    <inlineHelpText>Describe what needs to be done, why it matters, and any acceptance criteria or context a developer would need.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>