force-app/main/default/objects/Work_Item__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <description>Story point estimate representing the relative complexity and effort required to complete this item.</description>
    <inlineHelpText>Enter a point value (e.g. 1, 2, 3, 5, 8) using your team&apos;s scale. Higher numbers mean more complexity or uncertainty.</inlineHelpText>
    <label>Estimate (Points)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>