force-app/main/default/objects/Work_Item__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Auto-assigned sequential number within the parent project (1, 2, 3…). Set by trigger on insert of Story, Task, or Bug records. Do not edit manually.</description>
    <label>Item Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>