force-app/main/default/objects/Work_Item__c/fields/Lineage_Parent__c.field-meta.xml
<CustomField>
    <fullName>Lineage_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lineage Parent</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Lineage Children</relationshipLabel>
    <relationshipName>Lineage_Children</relationshipName>
    <type>Lookup</type>
</CustomField>