force-app/main/default/objects/Work_Item__c/fields/Parent_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent item in the hierarchy. Epics link to their Project here; Stories and Tasks link to their Epic.</description>
    <inlineHelpText>For Epics: select the Project this Epic belongs to. For Stories and Tasks: select the parent Epic.</inlineHelpText>
    <label>Parent Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Child Work Items</relationshipLabel>
    <relationshipName>Child_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>