force-app/main/default/objects/Work_Item__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>The BA agent's drafted delivery plan for this ticket — more detailed for Stories, lighter for Bugs and simple Tasks.</description>
    <inlineHelpText>How the BA agent proposes to deliver this item. Reviewed alongside the acceptance criteria before approval.</inlineHelpText>
    <label>Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>