force-app/main/default/objects/Work_Item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>The urgency and importance of this work item relative to others in the backlog or sprint.</description>
    <inlineHelpText>Critical = must address immediately; High = important this sprint; Medium = normal priority; Low = nice to have when capacity allows.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>