force-app/main/default/objects/Work_Item__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>Three-letter unique code identifying the project (e.g. ABC). Set by the user when creating a Project. Used as the prefix for all ticket keys under this project.</description>
    <label>Project Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>