force-app/main/default/objects/Work_Item__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>