force-app/main/default/objects/Work_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current stage of this work item in the delivery workflow. Drives which kanban column the card appears in.</description>
    <inlineHelpText>Update this to reflect where the item is in the process. The kanban board groups items by status automatically.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
                <default>true</default>
                <label>To Do</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Code Review</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Documenting</fullName>
            </value>
            <value>
                <fullName>Releasing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>