force-app/main/default/objects/Work_Item__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <description>What this raw Ticket will be reclassified as when approved out of triage.</description>
    <inlineHelpText>Set during triage review to tell the approval step which record type (Story, Task, or Bug) this ticket should become once approved into the Backlog.</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>