force-app/main/default/objects/Work_Item__c/fields/Ticket_Key__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Key__c</fullName>
    <description>Human-readable ticket identifier in the format CODE-NNNNN (e.g. ABC-00001). Set by trigger on insert of Story, Task, or Bug records. Do not edit manually.</description>
    <label>Ticket Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>