force-app/main/default/objects/Work_Item__c/fields/Triage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Triage_Notes__c</fullName>
    <description>Reviewer notes captured when a ticket is declined, for the BA agent to address on re-triage.</description>
    <inlineHelpText>Explain why this ticket was declined — the BA agent uses these notes to revise its classification, user story, acceptance criteria, or plan before resubmitting for review.</inlineHelpText>
    <label>Triage Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>