force-app/main/default/objects/Work_Item__c/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <description>Where this ticket is in the BA agent triage pipeline, from intake through human approval.</description>
    <inlineHelpText>Tracks ticket triage: Not Started → Reviewing → Reviewed → Approved/Declined. Declined tickets return to Reviewing with reviewer notes for the BA agent to re-triage.</inlineHelpText>
    <label>Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>