force-app/main/default/objects/Work_Item__c/fields/Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Work_Mode__c</fullName>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iterative</fullName>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>