force-app/main/default/objects/Work_Item__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>Defect work. Reactive in nature. Can be sprint or non-sprint.</description>
    <label>Bug</label>
</RecordType>