force-app/main/default/objects/Work_Item__c/recordTypes/Chapter.recordType-meta.xml
<RecordType>
    <fullName>Chapter</fullName>
    <active>true</active>
    <description>Implementation slice of a Story.</description>
    <label>Chapter</label>
</RecordType>