force-app/main/default/objects/Work_Item__c/recordTypes/Epic.recordType-meta.xml
<RecordType>
    <fullName>Epic</fullName>
    <active>true</active>
    <description>A significant body of work that contains Stories, Tasks, and Bugs.</description>
    <label>Epic</label>
</RecordType>