force-app/main/default/objects/Work_Item__c/recordTypes/Initiative.recordType-meta.xml
<RecordType>
    <fullName>Initiative</fullName>
    <active>true</active>
    <description>Top-level strategic container. Groups Epics into a coherent objective.</description>
    <label>Initiative</label>
</RecordType>