force-app/main/default/objects/Work_Item__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <description>Top-level strategic container. Groups Epics into a coherent objective.</description>
    <label>Project</label>
</RecordType>