force-app/main/default/objects/Work_Item__c/recordTypes/Step.recordType-meta.xml
<RecordType>
    <fullName>Step</fullName>
    <active>true</active>
    <description>Execution or fix step. Child of Task or Bug. Max depth: 2 levels.</description>
    <label>Step</label>
</RecordType>