force-app/main/default/objects/Work_Item__c/recordTypes/Story.recordType-meta.xml
<RecordType>
    <fullName>Story</fullName>
    <active>true</active>
    <description>Sprint-based iterative product work.</description>
    <label>Story</label>
</RecordType>