force-app/main/default/objects/Work_Item__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <description>Operational or continuous work. May optionally belong to a Sprint.</description>
    <label>Task</label>
</RecordType>