force-app/main/default/objects/Work_Item__c/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <description>Raw, unclassified intake — an idea, bug, or task awaiting BA agent triage. Reclassified to Story, Task, or Bug once triaged and approved.</description>
    <label>Ticket</label>
</RecordType>