force-app/main/default/objects/Work_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Ticket_Key__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Parent_Work_Item__c</columns>
    <columns>Sprint__c</columns>
    <columns>Priority__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>